Changelog v5.2.51 (2025-09-19):
- Added New Episode Meta Api
- Fixed transfer items in Premiumize
- Fixed Premiered in Watchlist

Changelog v5.2.50 (2025-09-18):
- Added more Meta to Watchlists

Changelog v5.2.49 (2025-09-16):
- Fixed small issue with Duration
- Changed Animepahe url

Changelog v5.2.48 (2025-09-15):
- Fixed two Setting types
- Removed print statement

Changelog v5.2.47 (2025-09-15):
- Added New Meta Api
- Renamed OtakuBrowser to MetaBrowser

Changelog v5.2.46 (2025-09-14):
- Added Migration Setting
- Fixed AnimePahe anime searching
- Fixed clearart and clearlogo for Episode Meta
- Fixed Batch Sources for Easy Debrid
- Fixed incorrect label with New Search

Changelog v5.2.45 (2025-09-10):
- Small Fix with Migration Script

Changelog v5.2.44 (2025-09-01):
- Added network settings for toggling IPv6 and HTTP/2
- Improved Filtering by preserving dashes

Changelog v5.2.43 (2025-08-29):
- Fixed String error for fanart selection
- Fixed Integer error for view ids

Changelog v5.2.42 (2025-08-25):
- Alot of Setting Fixes
- Added Widget Delay Setting
- Fixed Param error for Animetosho Scraping
- Fixed Touch Interaction with Calendar
- Fixed Widget error with Mal Menus
- Remove Old Deprecated Setting stuff

Changelog v5.2.41 (2025-08-13):
- Added Watch History
- Fixed Last Watched with Movies
- Fixed a few menu items
- Small Fix with Presets

Changelog v5.2.40 (2025-08-12):
- Added Two New Presets
- Updated database

Changelog v5.2.39 (2025-07-30):
- Updated embed extractor
- Updated database

Changelog v5.2.38 (2025-07-29):
- Fix Bug with Playlist
- Added Mapping to Database

Changelog v5.2.37 (2025-07-27):
- Fix Quick Setting Default

Changelog v5.2.36 (2025-07-27):
- Recoded Smart Skip
- Added Auto Skip Settings

Changelog v5.2.35 (2025-07-20):
- Updated embed extractor
- Fail gracefully when no sources are found

Changelog v5.2.34 (2025-07-16):
- Small fix with SmartPlay

Changelog v5.2.33 (2025-07-15):
- Added New Playback Option called SmartPlay